Closed Bug 10790 Opened 26 years ago Closed 26 years ago

url "macfixit" crashes browser

Categories

(Core :: Networking, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: mikepinkerton, Assigned: rpotts)

References

()

Details

Type just "macfixit" (no www or .com) into the url bar and the app crashes in
netlib in nsSocketTransport::CloseConnection. 100% reproduceable. On linux, it
asserts and then locks up the app. You have to kill it by hand.
I just tried typeing 'nasa' in the url bar and hitting return, and crashed
with the following stack:

 Calling chain using A6/R1 links
  Back chain  ISA  Caller
  00000000    PPC  17E51AFC
  03C36E00    PPC  17E50EF4  main+00060
  03C36DB0    PPC  17E50744  main1(int, char**)+00E38
  03C36C10    PPC  16FB34A8  nsAppShellService::Run()+00020
  03C36BD0    PPC  15998CF4  nsAppShell::Run()+00050
  03C36B50    PPC  159997A0  nsMacMessagePump::DoMessagePump()+00044
  03C36B00    PPC  15999AA8  nsMacMessagePump::DispatchEvent(int, EventRecord*)+
00188
  03C36AB0    PPC  17C2BE98  Repeater::DoRepeaters(const EventRecord&)+00034
  03C36A70    PPC  1597B7B4  nsToolkit::RepeatAction(const EventRecord&)+00044
  03C36A30    PPC  16142ABC  nsEventQueueServiceImpl::ProcessEvents()+0002C
  03C369F0    PPC  1613E268  nsHashtable::Enumerate(int (*)(nsHashKey*, void*,
void*), void*)
+0003C
  03C369B0    PPC  161BA63C  PL_HashTableEnumerateEntries+00060
  03C36940    PPC  1613DAA8  _hashEnumerate(PLHashEntry*, int, void*)+00030
  03C36900    PPC  16142A1C  EventDispatchingFunc(nsHashKey*, void*, void*)+0003C
  03C368C0    PPC  161580A4  nsEventQueueImpl::ProcessPendingEvents()+00018
  03C36880    PPC  161B9508  PL_ProcessPendingEvents+00078
  03C36830    PPC  161B963C  PL_HandleEvent+0004C
  03C367F0    PPC  153711BC  nsStreamListenerEvent::HandlePLEvent(PLEvent*)+0002C
  03C367A0    PPC  15371D40  nsOnStopRequestEvent::HandleEvent()+00040
  03C36750    PPC  1582FB00  nsHTTPResponseListener::OnStopRequest(nsIChannel*,
nsISupports*,
 unsigned int, const unsigned short*)+000CC
  03C36700    PPC  1582A19C  nsHTTPChannel::ResponseCompleted(nsIChannel*)+00054
 Closing log
Assignee: gagan → rpotts
Rick this is the same problem as I mentioned in 7722. The 'macfixit' host is not
found and the error propogates to OnStopRequest which tries to pass the
OnStopRequest to a null connection since OnStartRequest didn't get called. This
is part duplicate of that bug.
*** Bug 10852 has been marked as a duplicate of this bug. ***
Target Milestone: M9
*** Bug 10703 has been marked as a duplicate of this bug. ***
Blocks: 10703
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
It looks like this is fixed now...  I just tried the URL with the latest
apprunner and it worked fine.

-- rick
OK... I lied before :-)  But I've checked in a fix for it now.

-- rick
Now there are some assertions hit (for example loading www.mozilla.org under
linux) which you build in with your fix. They seem to have no ill effects but
are certainly worth a little investigation.

Assertion: "HTTPChannel is null." (m_pConnection) at file
nsHTTPResponseListener.cpp, line 64
Status: RESOLVED → VERIFIED
marking verified, akkana filed a bug about the asserts
also checked bug 10852, which doesn't crash anymore either
Bulk move of all Necko (to be deleted component) bugs to new Networking

component.
You need to log in before you can comment on or make changes to this bug.