bug #10790.  The HTTPChannel is now given to the HTTPResponseListener during construction.  Before, it was getting it via a dirty cast in the OnStartRequest notification.  Unfortunately, OnStartRequest is only called if the connection is successful.  This caused a crash in OnStopRequest if the HTTPChannel was not available :-(